--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -3,13 +3,15 @@
 @tailwind utilities;
 @layer base {
   :root {
+    --hover: 244, 55%, 41%;
+    /* --button: 231, 60%, 18%;  not registret yet  */
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 231 55% 27%;
+    --primary: 244, 47%, 20%;
     --primary-foreground: 0 0% 98%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
